--- a/test/fixtures/customers.yml
+++ b/test/fixtures/customers.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  username: MyString
+  first: John
+  last: Deer
+  username: john
 
 two:
-  name: MyString
-  username: MyString
+  first: Jane
+  last: Doe
+  username: jane
